# jpn-to-pdf

./: .gitignore  README.md  bibliography.bib  filter.py  flake.nix  hello-world.ipynb  output_to_input.py  paper.ipynb  pyproject.toml  render-latex.sh  render-paper.sh  render-pdf.sh
render-pdf/: apa-numeric-superscript-brackets.csl  filter.py  output_to_input.py  template.tex
