[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
jupyter-contrib-nbextensions = "^0.5.1"
nbformat = "^5.1.3"
more-itertools = "^8.12.0"
flit = "^3.6.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
